--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,15 @@
 {
-  "extends": "next/core-web-vitals"
+  "extends": ["next/core-web-vitals", "prettier"],
+  "plugins": ["prettier"],
+  "rules": {
+    "prettier/prettier": "error" // 启用 Prettier 规则，并设置错误级别
+  },
+  "parserOptions": {
+    "ecmaVersion": 2020, // 支持的 ECMAScript 版本
+    "sourceType": "module" // 使用的源代码类型（script 或 module）
+  },
+  "env": {
+    "browser": true, // 浏览器环境
+    "node": true // Node.js 环境
+  }
 }
