--- a/package.json
+++ b/package.json
@@ -7,17 +7,26 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "fix": "next lint --fix"
+    "fix": "next lint --fix",
+    "migrate:dev": "dotenv -e .env -- npx prisma migrate dev --name dev"
   },
   "dependencies": {
     "@ant-design/icons": "^5.3.7",
+    "@hookform/resolvers": "^3.9.1",
     "@lobehub/ui": "^1.142.1",
+    "@microsoft/fetch-event-source": "^2.0.1",
     "@prisma/client": "5.21.1",
     "@radix-ui/react-avatar": "^1.1.1",
+    "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-popover": "^1.1.2",
+    "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tabs": "^1.1.1",
+    "@radix-ui/react-tooltip": "^1.1.3",
+    "@tanstack/react-table": "^8.20.5",
     "antd": "^5.18.3",
     "antd-style": "^3.6.2",
     "class-variance-authority": "^0.7.0",
@@ -25,15 +34,17 @@
     "lucide-react": "^0.400.0",
     "next": "14.1.4",
     "next-auth": "5.0.0-beta.25",
-    "next-intl": "^3.21.1",
+    "next-intl": "^3.23.5",
     "next-themes": "^0.3.0",
     "nextjs-toploader": "^1.6.12",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.53.1",
     "react-layout-kit": "^1.9.0",
     "sass": "^1.77.6",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.23.8",
     "zustand": "^4.5.4"
   },
   "devDependencies": {
