--- a/package.json
+++ b/package.json
@@ -11,9 +11,8 @@
     "migrate:dev": "dotenv -e .env -- npx prisma migrate dev --name dev"
   },
   "dependencies": {
-    "@ant-design/icons": "^5.3.7",
+    "@ai-sdk/openai": "^0.0.70",
     "@hookform/resolvers": "^3.9.1",
-    "@lobehub/ui": "^1.142.1",
     "@microsoft/fetch-event-source": "^2.0.1",
     "@prisma/client": "5.21.1",
     "@radix-ui/react-avatar": "^1.1.1",
@@ -27,8 +26,7 @@
     "@radix-ui/react-tabs": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.3",
     "@tanstack/react-table": "^8.20.5",
-    "antd": "^5.18.3",
-    "antd-style": "^3.6.2",
+    "ai": "^3.4.30",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.400.0",
@@ -37,6 +35,8 @@
     "next-intl": "^3.23.5",
     "next-themes": "^0.3.0",
     "nextjs-toploader": "^1.6.12",
+    "pino": "^9.5.0",
+    "pino-pretty": "^11.3.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.53.1",
