--- a/package.json
+++ b/package.json
@@ -35,8 +35,6 @@
     "next-intl": "^3.23.5",
     "next-themes": "^0.3.0",
     "nextjs-toploader": "^1.6.12",
-    "pino": "^9.5.0",
-    "pino-pretty": "^11.3.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.53.1",
@@ -44,6 +42,7 @@
     "sass": "^1.77.6",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
+    "winston": "^3.16.0",
     "zod": "^3.23.8",
     "zustand": "^4.5.4"
   },
