build: 添加 postinstall 脚本以自动更新 Prisma 客户端
- 在 package.json 中添加 "postinstall": "prisma generate" 脚本
- 这将确保在安装依赖后自动更新 Prisma 客户端

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start",
     "lint": "next lint",
     "fix": "next lint --fix",
+    "postinstall": "prisma generate",
     "migrate:dev": "dotenv -e .env -- npx prisma migrate dev --name dev"
   },
   "dependencies": {
