--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "next start",
     "lint": "next lint",
     "fix": "next lint --fix",
-    "postinstall": "prisma generate",
+    "vercel-build": "prisma generate && prisma migrate deploy && next build",
     "migrate:dev": "dotenv -e .env -- npx prisma migrate dev --name dev"
   },
   "dependencies": {
