--- a/package.json
+++ b/package.json
@@ -40,6 +40,11 @@
     "react-dom": "^18",
     "react-hook-form": "^7.53.1",
     "react-layout-kit": "^1.9.0",
+    "react-markdown": "^9.0.1",
+    "react-syntax-highlighter": "^15.6.1",
+    "rehype-katex": "^7.0.1",
+    "remark-gfm": "^4.0.0",
+    "remark-math": "^6.0.0",
     "sass": "^1.77.6",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
