--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "ai": "^3.4.30",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.400.0",
     "next": "14.1.4",
     "next-auth": "5.0.0-beta.25",
