--- a/package.json
+++ b/package.json
@@ -34,7 +34,6 @@
     "ai": "^3.4.30",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "cz-git": "^1.11.0",
     "husky": "^9.1.7",
     "js-cookie": "^3.0.5",
     "lint-staged": "^15.3.0",
@@ -66,6 +65,8 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "commitizen": "^4.3.1",
+    "cz-git": "^1.11.0",
     "eslint": "^8",
     "eslint-config-next": "14.1.4",
     "eslint-config-prettier": "^9.1.0",
@@ -86,7 +87,7 @@
   },
   "config": {
     "commitizen": {
-      "path": "node_modules/cz-git"
+      "path": "./node_modules/cz-git"
     }
   }
 }
