--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint",
     "fix": "next lint --fix",
     "vercel-build": "prisma generate && prisma migrate deploy && next build",
-    "migrate:dev": "dotenv -e .env -- npx prisma migrate dev --name dev"
+    "migrate:dev": "dotenv -e .env -- npx prisma migrate dev --name dev",
+    "prepare": "husky"
   },
   "dependencies": {
     "@ai-sdk/openai": "^0.0.70",
@@ -34,7 +35,6 @@
     "ai": "^3.4.30",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "husky": "^9.1.7",
     "js-cookie": "^3.0.5",
     "lint-staged": "^15.3.0",
     "lucide-react": "^0.400.0",
@@ -71,6 +71,7 @@
     "eslint-config-next": "14.1.4",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
+    "husky": "^9.1.7",
     "postcss": "^8",
     "prettier": "^3.3.3",
     "prisma": "^5.21.1",
@@ -79,7 +80,7 @@
   },
   "lint-staged": {
     "**/*.{js,jsx,ts,tsx}": [
-      "next lint --fix"
+      "eslint --fix "
     ],
     "**/*.{css,scss,md}": [
       "prettier --write"
